fix more contrast :)

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -19,6 +19,18 @@ footer {
   
   color: rgb(180, 220, 255);
 }
+#logo a:hover{
+  
+  color: rgb(131, 197, 255);
+}
+#logo a:link{
+  
+  color: rgb(180, 220, 255);
+}
+#logo a:active{
+  
+  color: rgb(180, 220, 255);
+}
 header {
   background-color: #000000;
 }
